[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "amarwave"
version     = "2.0.0"
description = "Real-time WebSocket client for AmarWave servers"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "AmarWave", email = "hello@amarwave.com" }]
keywords    = ["websocket", "realtime", "pubsub", "amarwave", "async"]

requires-python = ">=3.10"

dependencies = [
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black",
    "mypy",
    "ruff",
]

[project.urls]
Homepage   = "https://amarwave.com"
Repository = "https://github.com/amarwave/amarwave-python"
Issues     = "https://github.com/amarwave/amarwave-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["amarwave*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
